# Mindset-app

./: .env  README.md  docker-compose.yml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  test-server.js  wait-for-db.sh
backend/migrations/: 20250407140236_students.down.sql  20250407140236_students.up.sql  20250409144535_courses_and_groups.down.sql  20250420192353_new_students.up.sql
backend/src/: main.rs  models.rs  services.rs
backend/src/migrations/: 20250409144535_courses_and_groups.up.sql
db-init/: 01_create_students.sql
frontend/: .eslintrc.json  Dockerfile  next-sitemap.config.js  next.config.ts  package-lock.json  package.json
frontend/public/: rating.csv  robots.txt  sitemap-0.xml  sitemap.xml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/medal/: route.ts
frontend/src/app/info/: clientProgram.tsx  page.tsx  program.css
frontend/src/app/program/: page.tsx
frontend/src/app/rating/: page.tsx  rating.css
frontend/src/components/Courses/: Courses.css  Courses.tsx
frontend/src/components/DataForm/: DataForm.css  DataForm.tsx
frontend/src/components/Footer/: Footer.css  Footer.tsx
frontend/src/components/Header/: Header.css  Header.tsx
frontend/src/components/Hero/: Hero.css  Hero.tsx
frontend/src/components/LearningProcess/: LearningProcess.css  LearningProcess.tsx
frontend/src/components/Pricing/: Pricing.css  Pricing.tsx
nginx/: Dockerfile  nginx.conf
scripts/: backup.sh  check-server.sh  deploy.sh  diagnose.sh  fix-all.sh  setup.sh  setup_firewall.sh  update-nginx-config.sh
