[package]
name = "rust_mindset_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres"] }
dotenvy = "0.15"
tokio = {version = "1.21.2", features = ["full"]}